WebViewImpl doesn't notify the page that the user has canceled fullscreen. https://bugs.webkit.org/show_bug.cgi?id=82760

Reviewed by Darin Fisher.

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::WebViewImpl):
(WebKit::WebViewImpl::willExitFullScreen):
(WebKit::WebViewImpl::exitFullScreenForElement):
* src/WebViewImpl.h:


Canonical link: https://commits.webkit.org/100348@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112991 268f45cc-cd09-0410-ab3c-d52691b4dbfc